Updates per UserPage + Auth fix
